[package]
name = "rust-ovr-cemuhook"
version = "0.0.1"
authors = ["jakedowns"]
edition = "2018"
description = "tiny server to route Oculus HMD Tracking Data to Emulators using Cemuhook gamepad motion protocol"
repository = "https://github.com/jakedowns/rust-ovr-cemuhook"
keywords = ["cemu", "cemuhook", "protocol", "gyroscope", "motion", "oculus", "vr", "meta"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.2"
crc32fast = "1.2.1"
rand = "0.8.3"
crossbeam-queue = "0.3.1"
ovr-sys = "0.3.0"
nalgebra = "0.31.2"
pad-motion = "0.1.6"

[dev-dependencies]
ctrlc = "3.1.8"
gilrs = "0.8.0"
multiinput = "0.1.0"
